Projeto/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start_
Rule 1     start_ -> PROGRAM IDENTIFICADOR PONTO_VIRGULA declaracoes BEGIN bloco_comandos END PONTO
Rule 2     bloco_comandos -> <empty>
Rule 3     bloco_comandos -> lista_comandos_pv comando
Rule 4     bloco_comandos -> lista_comandos_pv
Rule 5     bloco_comandos -> comando
Rule 6     lista_comandos_pv -> comando_pv
Rule 7     lista_comandos_pv -> lista_comandos_pv comando_pv
Rule 8     comando_pv -> comando PONTO_VIRGULA
Rule 9     comando -> atribuicao
Rule 10    comando -> leitura
Rule 11    comando -> escrita
Rule 12    comando -> if_h
Rule 13    comando -> while_h
Rule 14    comando -> for_h
Rule 15    comando -> return
Rule 16    comando -> BEGIN bloco_comandos END
Rule 17    atribuicao -> IDENTIFICADOR ATRIBUICAO chamada_funcao
Rule 18    atribuicao -> IDENTIFICADOR ATRIBUICAO expressao
Rule 19    leitura -> READLN PA IDENTIFICADOR PF
Rule 20    leitura -> READLN PA IDENTIFICADOR PRA expressao PRF PF
Rule 21    escrita -> WRITELN PA argumentos_escrita PF
Rule 22    argumentos_escrita -> <empty>
Rule 23    argumentos_escrita -> argumento
Rule 24    argumentos_escrita -> argumentos_escrita VIRGULA argumento
Rule 25    argumento -> STRING
Rule 26    argumento -> IDENTIFICADOR
Rule 27    argumento -> IDENTIFICADOR PRA expressao PRF
Rule 28    if_h -> IF expressao THEN comando
Rule 29    if_h -> IF expressao THEN comando ELSE comando
Rule 30    while_h -> WHILE expressao DO comando
Rule 31    for_h -> FOR IDENTIFICADOR ATRIBUICAO expressao TO expressao DO comando
Rule 32    for_h -> FOR IDENTIFICADOR ATRIBUICAO expressao DOWNTO expressao DO comando
Rule 33    chamada_funcao -> IDENTIFICADOR PA lista_ids PF
Rule 34    chamada_funcao -> IDENTIFICADOR PA PF
Rule 35    expressao -> expressao MAIS expressao
Rule 36    expressao -> expressao MENOS expressao
Rule 37    expressao -> expressao VEZES expressao
Rule 38    expressao -> expressao DIVIDIR expressao
Rule 39    expressao -> expressao MAIOR expressao
Rule 40    expressao -> expressao MENOR expressao
Rule 41    expressao -> expressao IGUAL expressao
Rule 42    expressao -> expressao DIFERENTE expressao
Rule 43    expressao -> expressao MENOR_IGUAL expressao
Rule 44    expressao -> expressao MAIOR_IGUAL expressao
Rule 45    expressao -> expressao DIV expressao
Rule 46    expressao -> expressao MOD expressao
Rule 47    expressao -> expressao AND expressao
Rule 48    expressao -> expressao OR expressao
Rule 49    expressao -> PA expressao PF
Rule 50    expressao -> IDENTIFICADOR
Rule 51    expressao -> IDENTIFICADOR PRA expressao PRF
Rule 52    expressao -> INTEGER
Rule 53    expressao -> REAL
Rule 54    expressao -> STRING
Rule 55    expressao -> TRUE
Rule 56    expressao -> FALSE
Rule 57    expressao -> NOT expressao
Rule 58    expressao -> LENGTH PA IDENTIFICADOR PF
Rule 59    declaracoes -> <empty>
Rule 60    declaracoes -> declaracoes declaracao_tipo
Rule 61    declaracao_tipo -> dec_variaveis
Rule 62    declaracao_tipo -> dec_funcao
Rule 63    dec_variaveis -> VAR lista_vars
Rule 64    lista_vars -> <empty>
Rule 65    lista_vars -> lista_vars lista_ids DOIS_PONTO tipo_variaveis PONTO_VIRGULA
Rule 66    lista_ids -> IDENTIFICADOR
Rule 67    lista_ids -> lista_ids VIRGULA IDENTIFICADOR
Rule 68    tipo_variaveis -> INTEGER_TYPE
Rule 69    tipo_variaveis -> REAL_TYPE
Rule 70    tipo_variaveis -> BOOLEAN_TYPE
Rule 71    tipo_variaveis -> CHAR_TYPE
Rule 72    tipo_variaveis -> STRING_TYPE
Rule 73    tipo_variaveis -> ARRAY PRA INTEGER PONTO_PONTO INTEGER PRF OF tipo_variaveis
Rule 74    dec_funcao -> FUNCTION IDENTIFICADOR PA parametros PF DOIS_PONTO tipo_variaveis PONTO_VIRGULA dec_variaveis_f BEGIN bloco_comandos_f END PONTO_VIRGULA
Rule 75    if_h_f -> IF expressao THEN comando
Rule 76    if_h_f -> IF expressao THEN comando ELSE comando
Rule 77    while_h_f -> WHILE expressao DO comando
Rule 78    for_h_f -> FOR IDENTIFICADOR ATRIBUICAO expressao TO expressao DO comando
Rule 79    for_h_f -> FOR IDENTIFICADOR ATRIBUICAO expressao DOWNTO expressao DO comando
Rule 80    bloco_comandos_f -> <empty>
Rule 81    bloco_comandos_f -> lista_comandos_pv_f comando_f
Rule 82    bloco_comandos_f -> lista_comandos_pv_f
Rule 83    bloco_comandos_f -> comando_f
Rule 84    lista_comandos_pv_f -> comando_pv_f
Rule 85    lista_comandos_pv_f -> lista_comandos_pv_f comando_pv_f
Rule 86    comando_pv_f -> comando_f PONTO_VIRGULA
Rule 87    comando_f -> atribuicao_f
Rule 88    comando_f -> leitura_f
Rule 89    comando_f -> escrita_f
Rule 90    comando_f -> if_h_f
Rule 91    comando_f -> while_h_f
Rule 92    comando_f -> for_h_f
Rule 93    comando_f -> return_f
Rule 94    comando_f -> BEGIN bloco_comandos_f END
Rule 95    atribuicao_f -> IDENTIFICADOR ATRIBUICAO chamada_funcao
Rule 96    atribuicao_f -> IDENTIFICADOR ATRIBUICAO expressao
Rule 97    leitura_f -> READLN PA IDENTIFICADOR PF
Rule 98    leitura_f -> READLN PA IDENTIFICADOR PRA expressao PRF PF
Rule 99    escrita_f -> WRITELN PA argumentos_escrita_f PF
Rule 100   argumentos_escrita_f -> <empty>
Rule 101   argumentos_escrita_f -> argumento_f
Rule 102   argumentos_escrita_f -> argumentos_escrita_f VIRGULA argumento
Rule 103   argumento_f -> STRING
Rule 104   argumento_f -> IDENTIFICADOR
Rule 105   argumento_f -> IDENTIFICADOR PRA expressao PRF
Rule 106   dec_variaveis_f -> <empty>
Rule 107   dec_variaveis_f -> VAR lista_vars_f
Rule 108   lista_vars_f -> <empty>
Rule 109   lista_vars_f -> lista_vars_f lista_ids_f DOIS_PONTO tipo_variaveis PONTO_VIRGULA
Rule 110   lista_ids_f -> IDENTIFICADOR
Rule 111   lista_ids_f -> lista_ids_f VIRGULA IDENTIFICADOR
Rule 112   return_f -> IDENTIFICADOR ATRIBUICAO IDENTIFICADOR PONTO_VIRGULA
Rule 113   parametros -> <empty>
Rule 114   parametros -> parametro
Rule 115   parametros -> parametro PONTO_VIRGULA parametros
Rule 116   parametro -> <empty>
Rule 117   parametro -> parametro lista_ids DOIS_PONTO tipo_variaveis
Rule 118   return -> IDENTIFICADOR ATRIBUICAO IDENTIFICADOR PONTO_VIRGULA

Terminals, with rules where they appear

AND                  : 47
ARRAY                : 73
ATRIBUICAO           : 17 18 31 32 78 79 95 96 112 118
BEGIN                : 1 16 74 94
BOOLEAN_TYPE         : 70
CHAR_TYPE            : 71
DIFERENTE            : 42
DIV                  : 45
DIVIDIR              : 38
DO                   : 30 31 32 77 78 79
DOIS_PONTO           : 65 74 109 117
DOWNTO               : 32 79
ELSE                 : 29 76
END                  : 1 16 74 94
FALSE                : 56
FOR                  : 31 32 78 79
FUNCTION             : 74
IDENTIFICADOR        : 1 17 18 19 20 26 27 31 32 33 34 50 51 58 66 67 74 78 79 95 96 97 98 104 105 110 111 112 112 118 118
IF                   : 28 29 75 76
IGUAL                : 41
INTEGER              : 52 73 73
INTEGER_TYPE         : 68
LENGTH               : 58
MAIOR                : 39
MAIOR_IGUAL          : 44
MAIS                 : 35
MENOR                : 40
MENOR_IGUAL          : 43
MENOS                : 36
MOD                  : 46
NOT                  : 57
OF                   : 73
OR                   : 48
PA                   : 19 20 21 33 34 49 58 74 97 98 99
PF                   : 19 20 21 33 34 49 58 74 97 98 99
PONTO                : 1
PONTO_PONTO          : 73
PONTO_VIRGULA        : 1 8 65 74 74 86 109 112 115 118
PRA                  : 20 27 51 73 98 105
PRF                  : 20 27 51 73 98 105
PROGRAM              : 1
READLN               : 19 20 97 98
REAL                 : 53
REAL_TYPE            : 69
STRING               : 25 54 103
STRING_TYPE          : 72
THEN                 : 28 29 75 76
TO                   : 31 78
TRUE                 : 55
VAR                  : 63 107
VEZES                : 37
VIRGULA              : 24 67 102 111
WHILE                : 30 77
WRITELN              : 21 99
error                : 

Nonterminals, with rules where they appear

argumento            : 23 24 102
argumento_f          : 101
argumentos_escrita   : 21 24
argumentos_escrita_f : 99 102
atribuicao           : 9
atribuicao_f         : 87
bloco_comandos       : 1 16
bloco_comandos_f     : 74 94
chamada_funcao       : 17 95
comando              : 3 5 8 28 29 29 30 31 32 75 76 76 77 78 79
comando_f            : 81 83 86
comando_pv           : 6 7
comando_pv_f         : 84 85
dec_funcao           : 62
dec_variaveis        : 61
dec_variaveis_f      : 74
declaracao_tipo      : 60
declaracoes          : 1 60
escrita              : 11
escrita_f            : 89
expressao            : 18 20 27 28 29 30 31 31 32 32 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 51 57 75 76 77 78 78 79 79 96 98 105
for_h                : 14
for_h_f              : 92
if_h                 : 12
if_h_f               : 90
leitura              : 10
leitura_f            : 88
lista_comandos_pv    : 3 4 7
lista_comandos_pv_f  : 81 82 85
lista_ids            : 33 65 67 117
lista_ids_f          : 109 111
lista_vars           : 63 65
lista_vars_f         : 107 109
parametro            : 114 115 117
parametros           : 74 115
return               : 15
return_f             : 93
start_               : 0
tipo_variaveis       : 65 73 74 109 117
while_h              : 13
while_h_f            : 91

Parsing method: LALR

state 0

    (0) S' -> . start_
    (1) start_ -> . PROGRAM IDENTIFICADOR PONTO_VIRGULA declaracoes BEGIN bloco_comandos END PONTO

    PROGRAM         shift and go to state 2

    start_                         shift and go to state 1

state 1

    (0) S' -> start_ .



state 2

    (1) start_ -> PROGRAM . IDENTIFICADOR PONTO_VIRGULA declaracoes BEGIN bloco_comandos END PONTO

    IDENTIFICADOR   shift and go to state 3


state 3

    (1) start_ -> PROGRAM IDENTIFICADOR . PONTO_VIRGULA declaracoes BEGIN bloco_comandos END PONTO

    PONTO_VIRGULA   shift and go to state 4


state 4

    (1) start_ -> PROGRAM IDENTIFICADOR PONTO_VIRGULA . declaracoes BEGIN bloco_comandos END PONTO
    (59) declaracoes -> .
    (60) declaracoes -> . declaracoes declaracao_tipo

    BEGIN           reduce using rule 59 (declaracoes -> .)
    VAR             reduce using rule 59 (declaracoes -> .)
    FUNCTION        reduce using rule 59 (declaracoes -> .)

    declaracoes                    shift and go to state 5

state 5

    (1) start_ -> PROGRAM IDENTIFICADOR PONTO_VIRGULA declaracoes . BEGIN bloco_comandos END PONTO
    (60) declaracoes -> declaracoes . declaracao_tipo
    (61) declaracao_tipo -> . dec_variaveis
    (62) declaracao_tipo -> . dec_funcao
    (63) dec_variaveis -> . VAR lista_vars
    (74) dec_funcao -> . FUNCTION IDENTIFICADOR PA parametros PF DOIS_PONTO tipo_variaveis PONTO_VIRGULA dec_variaveis_f BEGIN bloco_comandos_f END PONTO_VIRGULA

    BEGIN           shift and go to state 6
    VAR             shift and go to state 10
    FUNCTION        shift and go to state 11

    declaracao_tipo                shift and go to state 7
    dec_variaveis                  shift and go to state 8
    dec_funcao                     shift and go to state 9

state 6

    (1) start_ -> PROGRAM IDENTIFICADOR PONTO_VIRGULA declaracoes BEGIN . bloco_comandos END PONTO
    (2) bloco_comandos -> .
    (3) bloco_comandos -> . lista_comandos_pv comando
    (4) bloco_comandos -> . lista_comandos_pv
    (5) bloco_comandos -> . comando
    (6) lista_comandos_pv -> . comando_pv
    (7) lista_comandos_pv -> . lista_comandos_pv comando_pv
    (9) comando -> . atribuicao
    (10) comando -> . leitura
    (11) comando -> . escrita
    (12) comando -> . if_h
    (13) comando -> . while_h
    (14) comando -> . for_h
    (15) comando -> . return
    (16) comando -> . BEGIN bloco_comandos END
    (8) comando_pv -> . comando PONTO_VIRGULA
    (17) atribuicao -> . IDENTIFICADOR ATRIBUICAO chamada_funcao
    (18) atribuicao -> . IDENTIFICADOR ATRIBUICAO expressao
    (19) leitura -> . READLN PA IDENTIFICADOR PF
    (20) leitura -> . READLN PA IDENTIFICADOR PRA expressao PRF PF
    (21) escrita -> . WRITELN PA argumentos_escrita PF
    (28) if_h -> . IF expressao THEN comando
    (29) if_h -> . IF expressao THEN comando ELSE comando
    (30) while_h -> . WHILE expressao DO comando
    (31) for_h -> . FOR IDENTIFICADOR ATRIBUICAO expressao TO expressao DO comando
    (32) for_h -> . FOR IDENTIFICADOR ATRIBUICAO expressao DOWNTO expressao DO comando
    (118) return -> . IDENTIFICADOR ATRIBUICAO IDENTIFICADOR PONTO_VIRGULA

    END             reduce using rule 2 (bloco_comandos -> .)
    BEGIN           shift and go to state 13
    IDENTIFICADOR   shift and go to state 12
    READLN          shift and go to state 25
    WRITELN         shift and go to state 26
    IF              shift and go to state 27
    WHILE           shift and go to state 28
    FOR             shift and go to state 29

    bloco_comandos                 shift and go to state 14
    lista_comandos_pv              shift and go to state 15
    comando                        shift and go to state 16
    comando_pv                     shift and go to state 17
    atribuicao                     shift and go to state 18
    leitura                        shift and go to state 19
    escrita                        shift and go to state 20
    if_h                           shift and go to state 21
    while_h                        shift and go to state 22
    for_h                          shift and go to state 23
    return                         shift and go to state 24

state 7

    (60) declaracoes -> declaracoes declaracao_tipo .

    BEGIN           reduce using rule 60 (declaracoes -> declaracoes declaracao_tipo .)
    VAR             reduce using rule 60 (declaracoes -> declaracoes declaracao_tipo .)
    FUNCTION        reduce using rule 60 (declaracoes -> declaracoes declaracao_tipo .)


state 8

    (61) declaracao_tipo -> dec_variaveis .

    BEGIN           reduce using rule 61 (declaracao_tipo -> dec_variaveis .)
    VAR             reduce using rule 61 (declaracao_tipo -> dec_variaveis .)
    FUNCTION        reduce using rule 61 (declaracao_tipo -> dec_variaveis .)


state 9

    (62) declaracao_tipo -> dec_funcao .

    BEGIN           reduce using rule 62 (declaracao_tipo -> dec_funcao .)
    VAR             reduce using rule 62 (declaracao_tipo -> dec_funcao .)
    FUNCTION        reduce using rule 62 (declaracao_tipo -> dec_funcao .)


state 10

    (63) dec_variaveis -> VAR . lista_vars
    (64) lista_vars -> .
    (65) lista_vars -> . lista_vars lista_ids DOIS_PONTO tipo_variaveis PONTO_VIRGULA

    IDENTIFICADOR   reduce using rule 64 (lista_vars -> .)
    BEGIN           reduce using rule 64 (lista_vars -> .)
    VAR             reduce using rule 64 (lista_vars -> .)
    FUNCTION        reduce using rule 64 (lista_vars -> .)

    lista_vars                     shift and go to state 30

state 11

    (74) dec_funcao -> FUNCTION . IDENTIFICADOR PA parametros PF DOIS_PONTO tipo_variaveis PONTO_VIRGULA dec_variaveis_f BEGIN bloco_comandos_f END PONTO_VIRGULA

    IDENTIFICADOR   shift and go to state 31


state 12

    (17) atribuicao -> IDENTIFICADOR . ATRIBUICAO chamada_funcao
    (18) atribuicao -> IDENTIFICADOR . ATRIBUICAO expressao
    (118) return -> IDENTIFICADOR . ATRIBUICAO IDENTIFICADOR PONTO_VIRGULA

    ATRIBUICAO      shift and go to state 32


state 13

    (16) comando -> BEGIN . bloco_comandos END
    (2) bloco_comandos -> .
    (3) bloco_comandos -> . lista_comandos_pv comando
    (4) bloco_comandos -> . lista_comandos_pv
    (5) bloco_comandos -> . comando
    (6) lista_comandos_pv -> . comando_pv
    (7) lista_comandos_pv -> . lista_comandos_pv comando_pv
    (9) comando -> . atribuicao
    (10) comando -> . leitura
    (11) comando -> . escrita
    (12) comando -> . if_h
    (13) comando -> . while_h
    (14) comando -> . for_h
    (15) comando -> . return
    (16) comando -> . BEGIN bloco_comandos END
    (8) comando_pv -> . comando PONTO_VIRGULA
    (17) atribuicao -> . IDENTIFICADOR ATRIBUICAO chamada_funcao
    (18) atribuicao -> . IDENTIFICADOR ATRIBUICAO expressao
    (19) leitura -> . READLN PA IDENTIFICADOR PF
    (20) leitura -> . READLN PA IDENTIFICADOR PRA expressao PRF PF
    (21) escrita -> . WRITELN PA argumentos_escrita PF
    (28) if_h -> . IF expressao THEN comando
    (29) if_h -> . IF expressao THEN comando ELSE comando
    (30) while_h -> . WHILE expressao DO comando
    (31) for_h -> . FOR IDENTIFICADOR ATRIBUICAO expressao TO expressao DO comando
    (32) for_h -> . FOR IDENTIFICADOR ATRIBUICAO expressao DOWNTO expressao DO comando
    (118) return -> . IDENTIFICADOR ATRIBUICAO IDENTIFICADOR PONTO_VIRGULA

    END             reduce using rule 2 (bloco_comandos -> .)
    BEGIN           shift and go to state 13
    IDENTIFICADOR   shift and go to state 12
    READLN          shift and go to state 25
    WRITELN         shift and go to state 26
    IF              shift and go to state 27
    WHILE           shift and go to state 28
    FOR             shift and go to state 29

    bloco_comandos                 shift and go to state 33
    lista_comandos_pv              shift and go to state 15
    comando                        shift and go to state 16
    comando_pv                     shift and go to state 17
    atribuicao                     shift and go to state 18
    leitura                        shift and go to state 19
    escrita                        shift and go to state 20
    if_h                           shift and go to state 21
    while_h                        shift and go to state 22
    for_h                          shift and go to state 23
    return                         shift and go to state 24

state 14

    (1) start_ -> PROGRAM IDENTIFICADOR PONTO_VIRGULA declaracoes BEGIN bloco_comandos . END PONTO

    END             shift and go to state 34


state 15

    (3) bloco_comandos -> lista_comandos_pv . comando
    (4) bloco_comandos -> lista_comandos_pv .
    (7) lista_comandos_pv -> lista_comandos_pv . comando_pv
    (9) comando -> . atribuicao
    (10) comando -> . leitura
    (11) comando -> . escrita
    (12) comando -> . if_h
    (13) comando -> . while_h
    (14) comando -> . for_h
    (15) comando -> . return
    (16) comando -> . BEGIN bloco_comandos END
    (8) comando_pv -> . comando PONTO_VIRGULA
    (17) atribuicao -> . IDENTIFICADOR ATRIBUICAO chamada_funcao
    (18) atribuicao -> . IDENTIFICADOR ATRIBUICAO expressao
    (19) leitura -> . READLN PA IDENTIFICADOR PF
    (20) leitura -> . READLN PA IDENTIFICADOR PRA expressao PRF PF
    (21) escrita -> . WRITELN PA argumentos_escrita PF
    (28) if_h -> . IF expressao THEN comando
    (29) if_h -> . IF expressao THEN comando ELSE comando
    (30) while_h -> . WHILE expressao DO comando
    (31) for_h -> . FOR IDENTIFICADOR ATRIBUICAO expressao TO expressao DO comando
    (32) for_h -> . FOR IDENTIFICADOR ATRIBUICAO expressao DOWNTO expressao DO comando
    (118) return -> . IDENTIFICADOR ATRIBUICAO IDENTIFICADOR PONTO_VIRGULA

    END             reduce using rule 4 (bloco_comandos -> lista_comandos_pv .)
    BEGIN           shift and go to state 13
    IDENTIFICADOR   shift and go to state 12
    READLN          shift and go to state 25
    WRITELN         shift and go to state 26
    IF              shift and go to state 27
    WHILE           shift and go to state 28
    FOR             shift and go to state 29

    comando                        shift and go to state 35
    comando_pv                     shift and go to state 36
    atribuicao                     shift and go to state 18
    leitura                        shift and go to state 19
    escrita                        shift and go to state 20
    if_h                           shift and go to state 21
    while_h                        shift and go to state 22
    for_h                          shift and go to state 23
    return                         shift and go to state 24

state 16

    (5) bloco_comandos -> comando .
    (8) comando_pv -> comando . PONTO_VIRGULA

    END             reduce using rule 5 (bloco_comandos -> comando .)
    PONTO_VIRGULA   shift and go to state 37


state 17

    (6) lista_comandos_pv -> comando_pv .

    BEGIN           reduce using rule 6 (lista_comandos_pv -> comando_pv .)
    IDENTIFICADOR   reduce using rule 6 (lista_comandos_pv -> comando_pv .)
    READLN          reduce using rule 6 (lista_comandos_pv -> comando_pv .)
    WRITELN         reduce using rule 6 (lista_comandos_pv -> comando_pv .)
    IF              reduce using rule 6 (lista_comandos_pv -> comando_pv .)
    WHILE           reduce using rule 6 (lista_comandos_pv -> comando_pv .)
    FOR             reduce using rule 6 (lista_comandos_pv -> comando_pv .)
    END             reduce using rule 6 (lista_comandos_pv -> comando_pv .)


state 18

    (9) comando -> atribuicao .

    PONTO_VIRGULA   reduce using rule 9 (comando -> atribuicao .)
    END             reduce using rule 9 (comando -> atribuicao .)
    ELSE            reduce using rule 9 (comando -> atribuicao .)


state 19

    (10) comando -> leitura .

    PONTO_VIRGULA   reduce using rule 10 (comando -> leitura .)
    END             reduce using rule 10 (comando -> leitura .)
    ELSE            reduce using rule 10 (comando -> leitura .)


state 20

    (11) comando -> escrita .

    PONTO_VIRGULA   reduce using rule 11 (comando -> escrita .)
    END             reduce using rule 11 (comando -> escrita .)
    ELSE            reduce using rule 11 (comando -> escrita .)


state 21

    (12) comando -> if_h .

    PONTO_VIRGULA   reduce using rule 12 (comando -> if_h .)
    END             reduce using rule 12 (comando -> if_h .)
    ELSE            reduce using rule 12 (comando -> if_h .)


state 22

    (13) comando -> while_h .

    PONTO_VIRGULA   reduce using rule 13 (comando -> while_h .)
    END             reduce using rule 13 (comando -> while_h .)
    ELSE            reduce using rule 13 (comando -> while_h .)


state 23

    (14) comando -> for_h .

    PONTO_VIRGULA   reduce using rule 14 (comando -> for_h .)
    END             reduce using rule 14 (comando -> for_h .)
    ELSE            reduce using rule 14 (comando -> for_h .)


state 24

    (15) comando -> return .

    PONTO_VIRGULA   reduce using rule 15 (comando -> return .)
    END             reduce using rule 15 (comando -> return .)
    ELSE            reduce using rule 15 (comando -> return .)


state 25

    (19) leitura -> READLN . PA IDENTIFICADOR PF
    (20) leitura -> READLN . PA IDENTIFICADOR PRA expressao PRF PF

    PA              shift and go to state 38


state 26

    (21) escrita -> WRITELN . PA argumentos_escrita PF

    PA              shift and go to state 39


state 27

    (28) if_h -> IF . expressao THEN comando
    (29) if_h -> IF . expressao THEN comando ELSE comando
    (35) expressao -> . expressao MAIS expressao
    (36) expressao -> . expressao MENOS expressao
    (37) expressao -> . expressao VEZES expressao
    (38) expressao -> . expressao DIVIDIR expressao
    (39) expressao -> . expressao MAIOR expressao
    (40) expressao -> . expressao MENOR expressao
    (41) expressao -> . expressao IGUAL expressao
    (42) expressao -> . expressao DIFERENTE expressao
    (43) expressao -> . expressao MENOR_IGUAL expressao
    (44) expressao -> . expressao MAIOR_IGUAL expressao
    (45) expressao -> . expressao DIV expressao
    (46) expressao -> . expressao MOD expressao
    (47) expressao -> . expressao AND expressao
    (48) expressao -> . expressao OR expressao
    (49) expressao -> . PA expressao PF
    (50) expressao -> . IDENTIFICADOR
    (51) expressao -> . IDENTIFICADOR PRA expressao PRF
    (52) expressao -> . INTEGER
    (53) expressao -> . REAL
    (54) expressao -> . STRING
    (55) expressao -> . TRUE
    (56) expressao -> . FALSE
    (57) expressao -> . NOT expressao
    (58) expressao -> . LENGTH PA IDENTIFICADOR PF

    PA              shift and go to state 41
    IDENTIFICADOR   shift and go to state 42
    INTEGER         shift and go to state 43
    REAL            shift and go to state 44
    STRING          shift and go to state 45
    TRUE            shift and go to state 46
    FALSE           shift and go to state 47
    NOT             shift and go to state 48
    LENGTH          shift and go to state 49

    expressao                      shift and go to state 40

state 28

    (30) while_h -> WHILE . expressao DO comando
    (35) expressao -> . expressao MAIS expressao
    (36) expressao -> . expressao MENOS expressao
    (37) expressao -> . expressao VEZES expressao
    (38) expressao -> . expressao DIVIDIR expressao
    (39) expressao -> . expressao MAIOR expressao
    (40) expressao -> . expressao MENOR expressao
    (41) expressao -> . expressao IGUAL expressao
    (42) expressao -> . expressao DIFERENTE expressao
    (43) expressao -> . expressao MENOR_IGUAL expressao
    (44) expressao -> . expressao MAIOR_IGUAL expressao
    (45) expressao -> . expressao DIV expressao
    (46) expressao -> . expressao MOD expressao
    (47) expressao -> . expressao AND expressao
    (48) expressao -> . expressao OR expressao
    (49) expressao -> . PA expressao PF
    (50) expressao -> . IDENTIFICADOR
    (51) expressao -> . IDENTIFICADOR PRA expressao PRF
    (52) expressao -> . INTEGER
    (53) expressao -> . REAL
    (54) expressao -> . STRING
    (55) expressao -> . TRUE
    (56) expressao -> . FALSE
    (57) expressao -> . NOT expressao
    (58) expressao -> . LENGTH PA IDENTIFICADOR PF

    PA              shift and go to state 41
    IDENTIFICADOR   shift and go to state 42
    INTEGER         shift and go to state 43
    REAL            shift and go to state 44
    STRING          shift and go to state 45
    TRUE            shift and go to state 46
    FALSE           shift and go to state 47
    NOT             shift and go to state 48
    LENGTH          shift and go to state 49

    expressao                      shift and go to state 50

state 29

    (31) for_h -> FOR . IDENTIFICADOR ATRIBUICAO expressao TO expressao DO comando
    (32) for_h -> FOR . IDENTIFICADOR ATRIBUICAO expressao DOWNTO expressao DO comando

    IDENTIFICADOR   shift and go to state 51


state 30

    (63) dec_variaveis -> VAR lista_vars .
    (65) lista_vars -> lista_vars . lista_ids DOIS_PONTO tipo_variaveis PONTO_VIRGULA
    (66) lista_ids -> . IDENTIFICADOR
    (67) lista_ids -> . lista_ids VIRGULA IDENTIFICADOR

    BEGIN           reduce using rule 63 (dec_variaveis -> VAR lista_vars .)
    VAR             reduce using rule 63 (dec_variaveis -> VAR lista_vars .)
    FUNCTION        reduce using rule 63 (dec_variaveis -> VAR lista_vars .)
    IDENTIFICADOR   shift and go to state 53

    lista_ids                      shift and go to state 52

state 31

    (74) dec_funcao -> FUNCTION IDENTIFICADOR . PA parametros PF DOIS_PONTO tipo_variaveis PONTO_VIRGULA dec_variaveis_f BEGIN bloco_comandos_f END PONTO_VIRGULA

    PA              shift and go to state 54


state 32

    (17) atribuicao -> IDENTIFICADOR ATRIBUICAO . chamada_funcao
    (18) atribuicao -> IDENTIFICADOR ATRIBUICAO . expressao
    (118) return -> IDENTIFICADOR ATRIBUICAO . IDENTIFICADOR PONTO_VIRGULA
    (33) chamada_funcao -> . IDENTIFICADOR PA lista_ids PF
    (34) chamada_funcao -> . IDENTIFICADOR PA PF
    (35) expressao -> . expressao MAIS expressao
    (36) expressao -> . expressao MENOS expressao
    (37) expressao -> . expressao VEZES expressao
    (38) expressao -> . expressao DIVIDIR expressao
    (39) expressao -> . expressao MAIOR expressao
    (40) expressao -> . expressao MENOR expressao
    (41) expressao -> . expressao IGUAL expressao
    (42) expressao -> . expressao DIFERENTE expressao
    (43) expressao -> . expressao MENOR_IGUAL expressao
    (44) expressao -> . expressao MAIOR_IGUAL expressao
    (45) expressao -> . expressao DIV expressao
    (46) expressao -> . expressao MOD expressao
    (47) expressao -> . expressao AND expressao
    (48) expressao -> . expressao OR expressao
    (49) expressao -> . PA expressao PF
    (50) expressao -> . IDENTIFICADOR
    (51) expressao -> . IDENTIFICADOR PRA expressao PRF
    (52) expressao -> . INTEGER
    (53) expressao -> . REAL
    (54) expressao -> . STRING
    (55) expressao -> . TRUE
    (56) expressao -> . FALSE
    (57) expressao -> . NOT expressao
    (58) expressao -> . LENGTH PA IDENTIFICADOR PF

    IDENTIFICADOR   shift and go to state 55
    PA              shift and go to state 41
    INTEGER         shift and go to state 43
    REAL            shift and go to state 44
    STRING          shift and go to state 45
    TRUE            shift and go to state 46
    FALSE           shift and go to state 47
    NOT             shift and go to state 48
    LENGTH          shift and go to state 49

    chamada_funcao                 shift and go to state 56
    expressao                      shift and go to state 57

state 33

    (16) comando -> BEGIN bloco_comandos . END

    END             shift and go to state 58


state 34

    (1) start_ -> PROGRAM IDENTIFICADOR PONTO_VIRGULA declaracoes BEGIN bloco_comandos END . PONTO

    PONTO           shift and go to state 59


state 35

    (3) bloco_comandos -> lista_comandos_pv comando .
    (8) comando_pv -> comando . PONTO_VIRGULA

    END             reduce using rule 3 (bloco_comandos -> lista_comandos_pv comando .)
    PONTO_VIRGULA   shift and go to state 37


state 36

    (7) lista_comandos_pv -> lista_comandos_pv comando_pv .

    BEGIN           reduce using rule 7 (lista_comandos_pv -> lista_comandos_pv comando_pv .)
    IDENTIFICADOR   reduce using rule 7 (lista_comandos_pv -> lista_comandos_pv comando_pv .)
    READLN          reduce using rule 7 (lista_comandos_pv -> lista_comandos_pv comando_pv .)
    WRITELN         reduce using rule 7 (lista_comandos_pv -> lista_comandos_pv comando_pv .)
    IF              reduce using rule 7 (lista_comandos_pv -> lista_comandos_pv comando_pv .)
    WHILE           reduce using rule 7 (lista_comandos_pv -> lista_comandos_pv comando_pv .)
    FOR             reduce using rule 7 (lista_comandos_pv -> lista_comandos_pv comando_pv .)
    END             reduce using rule 7 (lista_comandos_pv -> lista_comandos_pv comando_pv .)


state 37

    (8) comando_pv -> comando PONTO_VIRGULA .

    BEGIN           reduce using rule 8 (comando_pv -> comando PONTO_VIRGULA .)
    IDENTIFICADOR   reduce using rule 8 (comando_pv -> comando PONTO_VIRGULA .)
    READLN          reduce using rule 8 (comando_pv -> comando PONTO_VIRGULA .)
    WRITELN         reduce using rule 8 (comando_pv -> comando PONTO_VIRGULA .)
    IF              reduce using rule 8 (comando_pv -> comando PONTO_VIRGULA .)
    WHILE           reduce using rule 8 (comando_pv -> comando PONTO_VIRGULA .)
    FOR             reduce using rule 8 (comando_pv -> comando PONTO_VIRGULA .)
    END             reduce using rule 8 (comando_pv -> comando PONTO_VIRGULA .)


state 38

    (19) leitura -> READLN PA . IDENTIFICADOR PF
    (20) leitura -> READLN PA . IDENTIFICADOR PRA expressao PRF PF

    IDENTIFICADOR   shift and go to state 60


state 39

    (21) escrita -> WRITELN PA . argumentos_escrita PF
    (22) argumentos_escrita -> .
    (23) argumentos_escrita -> . argumento
    (24) argumentos_escrita -> . argumentos_escrita VIRGULA argumento
    (25) argumento -> . STRING
    (26) argumento -> . IDENTIFICADOR
    (27) argumento -> . IDENTIFICADOR PRA expressao PRF

    PF              reduce using rule 22 (argumentos_escrita -> .)
    VIRGULA         reduce using rule 22 (argumentos_escrita -> .)
    STRING          shift and go to state 63
    IDENTIFICADOR   shift and go to state 64

    argumentos_escrita             shift and go to state 61
    argumento                      shift and go to state 62

state 40

    (28) if_h -> IF expressao . THEN comando
    (29) if_h -> IF expressao . THEN comando ELSE comando
    (35) expressao -> expressao . MAIS expressao
    (36) expressao -> expressao . MENOS expressao
    (37) expressao -> expressao . VEZES expressao
